# demo-source-index

./: .gitignore  README.md  pyproject.toml
.agents/rules/: 01-context.md  02-extend-rules.md
demo-ast/: README.md  pyproject.toml
demo-ast/docs/: grammar.md  languages_inspect.json  languages_inspect.md  query_captures.md  standardize_tree_structure.md
demo-ast/research/: uast_design.md
demo-ast/samples/: complex_source_code.py
demo-ast/samples/java/single_file/: ComplexSample.java  SimpleSample.java
demo-ast/samples/python/single_file/: complex_sample.py  simple_sample.py
demo-ast/src/demo_ast/: __init__.py  cli.py  default_config.py
demo-ast/src/demo_ast/cli/: __init__.py  config.py  formatter.py  inspect_language.py  parse_code.py
demo-ast/src/demo_ast/core/: __init__.py  language_registry.py  parser_factory.py
demo-ast/src/demo_ast/core/uast/: __init__.py  converter.py  uast_node.py
demo-ast/src/demo_ast/languages/: __init__.py
demo-ast/src/demo_ast/languages/java/: __init__.py
demo-ast/src/demo_ast/languages/javascript/: __init__.py
demo-ast/src/demo_ast/languages/python/: __init__.py  query.scm
demo-ast/src/demo_ast/parser/: __init__.py  language_config.py  language_registry.py  parser_factory.py
demo-ast/src/demo_ast/scanner/: __init__.py  github_repo_scanner.py  local_repo_scanner.py  repo_scanner.py
demo-ast/tests/: conftest.py  test_load_language.py  test_parse_languages.py
demo-graphdb/: Makefile  README.md  pyproject.toml
demo-graphdb/src/: main.py
demo-graphdb/src/demo_graphdb/: __init__.py  cli.py
demo-graphdb/src/demo_graphdb/db/: driver.py  session.py
demo-graphdb/src/demo_graphdb/graph/: labels.py  relationships.py
demo-graphdb/src/demo_graphdb/graph/queries/: function_queries.py
demo-graphdb/src/demo_graphdb/ingest_data/: example_file.py  hieu_custom_algo.py  ingestor.py  parser.py
demo-graphdb/src/demo_graphdb/models/: function.py
demo_neo4j/: Makefile  pyproject.toml
demo_neo4j/input_src/: animal.py  main.py
demo_neo4j/src/demo_neo4j/: __init__.py  demo_ingest.py  demo_queries.py
demo_neo4j/src/demo_neo4j/graph/: driver.py
demo_neo4j/src/demo_neo4j/repositories/: node_repo.py
demo_neo4j/src/demo_neo4j/services/: query.py
demo_neo4j/src/demo_neo4j/tests/: db_connection.py  test_query.py
demo_vectordb/: calls.db  pyproject.toml  run_demo.py
demo_vectordb/sample_code/: helper.py  main.py
demo_vectordb/src/demo_vectordb/: __init__.py
demo_vectordb/src/demo_vectordb/ingestion/extractor/: db.py  lsp_client.py  pipeline.py  ts_scanner.py
demo_vectordb/src/demo_vectordb/ingestion/models/: graph.py  node.py
