[project]
name = "demo-ast"
version = "0.1.0"
description = "Demo module for Parse code with tree-sitter"
readme = "README.md"
authors = [
    { name = "tule", email = "tuleaibk@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "tabulate>=0.10.0",
    "tree-sitter>=0.26.0",
    "tree-sitter-c>=0.24.2",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-css>=0.25.0",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-html>=0.23.2",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-json>=0.24.8",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-rust>=0.24.2",
    "tree-sitter-toml>=0.7.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-yaml>=0.7.2",
    "typer>=0.26.8",
]

[project.scripts]
demo-ast = "demo_ast.cli:run"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = []

[tool.pytest]
minversion = "9.0"
addopts = ["-vv", "-ra", "-q"]
testpaths = [
    "tests",
]

[tool.ruff]
extend = "../pyproject.toml"
exclude = [
    "samples/",
]

[tool.ruff.lint.isort]
known-first-party = ["demo_ast"]
